Fix sidebar aside spacing

--- a/_less/_objects.sidebar.less
+++ b/_less/_objects.sidebar.less
@@ -33,7 +33,7 @@
 
 .sidebar__aside {
   font-size: 0.8rem;
-  padding-top: 1rem;
+  padding-top: 0.5rem;
   padding-left: 20%;
   border-top: @border;
   border-color: #ffffff;
